# Ai-Chat

./: .gitignore  .gitmodules  CMakeLists.txt  ControlLEDByWebBTN.ino  README.md  premake5.lua
.NET Multi-platform App UI/: App.xaml  App.xaml.cs  CMakeLists.txt  MauiProgram.cs
.NET_MAUI_APP/: ..csproj  .NET MAUI App.csproj  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  CMakeLists.txt  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
.github/: build.sh  dev.sh
.github/workflows/: cmake-single-platform.yml  main.yml
ControlLedByWebServerBTN/arduino/: arduino.ino
Maze-AI/AI/: AI.cpp  AI.h
Maze-AI/APP/: APP.cpp  APP.h  main.cpp
Maze-AI/MAZE/: MAZE.cpp  MAZE.h
NET_MAUI_APP/: ..csproj  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
Neural-Network/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  main.cpp
maui/: MAUI.sln  MainPage.xaml
